# AIMiro

./: .gitignore  Dockerfile  README.md  ai_image_analysis.py  backend_server.py  camera_capture.py  docker-compose.yml  prompt.md  pyproject.toml  test_face_recognition.py
backend/: __init__.py  ai_image_analysis.py  backend_server.py  camera_capture.py  core.py  dlib_wrapper.py  face_advanced_strategies.py  face_recognition_insightface.py  face_recognition_module.py  test_threshold_optimization.py
frontend/: preview.html
tests/: conftest.py  debug_insightface.py  test_ai_image_analysis.py  test_antelopev2.py  test_backend_server.py  test_camera_capture.py  test_different_person_separation.py  test_dnn_face_detection.py  test_face_recognition.py  test_insightface_det_size.py  test_insightface_vs_face_recognition.py  test_model_fusion.py  test_same_person_similarity.py  test_threshold_optimization.py
