[project]
name = "miro-demo"
version = "0.1.0"
description = "Camera capture and AI image analysis demo"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "flask>=3.0.0",
  "flask-cors>=4.0.0",
  "numpy>=1.26.0",
  "opencv-python-headless>=4.10.0.84",
  "requests>=2.33.0",
  "python-dotenv>=1.0.1",
]

[dependency-groups]
dev = [
  "black>=24.10.0",
  "flake8>=7.1.1",
  "ipython>=8.32.0",
  "pytest>=8.3.3",
  "pytest-cov>=5.0.0",
]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
