[project]
name = "miro-demo"
version = "0.1.0"
description = "Camera capture and AI image analysis demo"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "flask>=3.0.0",
  "flask-cors>=4.0.0",
  "numpy>=1.26.0",
  "requests>=2.33.0",
  "python-dotenv>=1.0.1",
  # OpenCV: macOS/Windows/Linux x86_64/aarch64 使用官方 wheel
  # Linux ARMv6 (树莓派 Zero/1) 需要手动安装系统包: sudo apt install python3-opencv
  "opencv-python-headless>=4.10.0.84; platform_machine != 'armv6l'",
]

[tool.uv]
# 如果需要在 ARMv6 上开发，取消注释下面这行
# required-environments = ["sys_platform == 'linux' and platform_machine == 'armv6l'"]

[dependency-groups]
dev = [
  "black>=24.10.0",
  "flake8>=7.1.1",
  "ipython>=8.32.0",
  "pytest>=8.3.3",
  "pytest-cov>=5.0.0",
]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
